crates/biome_cli/tests/snapshots/main_cases_rules_via_dependencies/doesnt_enable_rules_when_recommended_is_false.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/doesnt_enable_rules_when_recommended_is_false'
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false
    }
  }
}
```

## `package.json`

```json
{
    "dependencies": {
        "react": "^16.0.0"
    }
}

```

## `test.jsx`

```jsx

import { useCallback } from "react";

function Component2() {
    const [local,SetLocal] = useState(0);
    const handle = useCallback(() => {
      console.log(local);
    }, [local, local]);
}
    
```

# Emitted Messages

```block
<TEMP_DIR>/doesnt_enable_rules_when_recommended_is_false/biome.json:2:11 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
  > 2 │ "linter": {
      │           ^
  > 3 │     "rules": {
  > 4 │         "recommended": false
  > 5 │     }
  > 6 │ }
      │ ^
    7 │     }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
biome.json:2:11 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
  > 2 │ "linter": {
      │           ^
  > 3 │     "rules": {
  > 4 │         "recommended": false
  > 5 │     }
  > 6 │ }
      │ ^
    7 │     }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 1 info.
```
