crates/biome_cli/tests/snapshots/main_cases_rules_via_dependencies/enables_rules_via_dependencies.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
## `package.json`

```json
{
    "dependencies": {
        "react": "latest"
    }
}

```

## `test.jsx`

```jsx

import { useCallback } from "react";

function Component2() {
    const [local,SetLocal] = useState(0);
    const handle = useCallback(() => {
      console.log(local);
    }, [local, local]);
}
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.jsx:6:20 lint/correctness/useExhaustiveDependencies ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This hook specifies more dependencies than necessary: local
  
    4 │ function Component2() {
    5 │     const [local,SetLocal] = useState(0);
  > 6 │     const handle = useCallback(() => {
      │                    ^^^^^^^^^^^
    7 │       console.log(local);
    8 │     }, [local, local]);
  
  i This dependency can be removed from the list.
  
     6 │     const handle = useCallback(() => {
     7 │       console.log(local);
   > 8 │     }, [local, local]);
       │                ^^^^^
     9 │ }
    10 │     
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
