crates/biome_cli/tests/snapshots/main_cases_rules_via_dependencies/enables_rules_via_dependencies_when_setting_domains_in_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/enables_rules_via_dependencies_when_setting_domains_in_config'
```

## `biome.json`

```json
{
  "linter": {
    "domains": {
      "test": "recommended"
    }
  }
}
```

## `package.json`

```json
{
    "dependencies": {
        "react": "^18.0.0"
    }
}

```

## `test.jsx`

```jsx

import { useEffect, useState } from "react";

function Component2() {
    const [local, setLocal] = useState(0);
    useEffect(() => {
      console.log(local);
    }, []);
}
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.jsx:4:10 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This function Component2 is unused.
  
    2 │ import { useEffect, useState } from "react";
    3 │ 
  > 4 │ function Component2() {
      │          ^^^^^^^^^^
    5 │     const [local, setLocal] = useState(0);
    6 │     useEffect(() => {
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend Component2 with an underscore.
  
     2  2 │   import { useEffect, useState } from "react";
     3  3 │   
     4    │ - function·Component2()·{
        4 │ + function·_Component2()·{
     5  5 │       const [local, setLocal] = useState(0);
     6  6 │       useEffect(() => {
  

```

```block
test.jsx:5:19 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable setLocal is unused.
  
    4 │ function Component2() {
  > 5 │     const [local, setLocal] = useState(0);
      │                   ^^^^^^^^
    6 │     useEffect(() => {
    7 │       console.log(local);
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend setLocal with an underscore.
  
     3  3 │   
     4  4 │   function Component2() {
     5    │ - ····const·[local,·setLocal]·=·useState(0);
        5 │ + ····const·[local,·_setLocal]·=·useState(0);
     6  6 │       useEffect(() => {
     7  7 │         console.log(local);
  

```

```block
test.jsx:6:5 lint/correctness/useExhaustiveDependencies  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This hook does not specify its dependency on local.
  
    4 │ function Component2() {
    5 │     const [local, setLocal] = useState(0);
  > 6 │     useEffect(() => {
      │     ^^^^^^^^^
    7 │       console.log(local);
    8 │     }, []);
  
  i This dependency is being used here, but is not specified in the hook dependency list.
  
    5 │     const [local, setLocal] = useState(0);
    6 │     useEffect(() => {
  > 7 │       console.log(local);
      │                   ^^^^^
    8 │     }, []);
    9 │ }
  
  i React relies on hook dependencies to determine when to re-compute Effects.
    Failing to specify dependencies can result in Effects not updating correctly when state changes.
    These "stale closures" are a common source of surprising bugs.
  
  i Either include it or remove the dependency array.
  
  i Unsafe fix: Add the missing dependency local to the list.
  
    8 │ ····},·[local]);
      │         +++++   

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 1 error.
Found 2 warnings.
```
