crates/biome_cli/tests/snapshots/main_cases_rules_via_dependencies/enables_test_globals_via_dependencies.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/enables_test_globals_via_dependencies'
```

## `package.json`

```json
{
    "dependencies": {
        "mocha": "10.0.0"
    }
}

```

## `test.js`

```js

describe("foo", () => {
	beforeEach(() => {
	});
	beforeEach(() => {
	});
	test("bar", () => {
		someFn();
	});
});
    
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:5:2 lint/suspicious/noDuplicateTestHooks ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Duplicate beforeEach hook found.
  
    3 │ 	beforeEach(() => {
    4 │ 	});
  > 5 │ 	beforeEach(() => {
      │ 	^^^^^^^^^^^^^^^^^^
  > 6 │ 	});
      │ 	^^
    7 │ 	test("bar", () => {
    8 │ 		someFn();
  
  i Remove this duplicate hook or consolidate the logic into a single hook.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
```
